routing issues and search empty handlers are added

--- a/findly-builder/src/app/components/add-alt-faq/add-alt-faq.component.html
+++ b/findly-builder/src/app/components/add-alt-faq/add-alt-faq.component.html
@@ -7,11 +7,11 @@
           <img src="assets/images/search-gray.svg" class="search-icon">
         </div>                                        
         <ul class="dropdown-menu content-menu">                                                                  
-          <li><a href="#">What are the process of creating insta account in citibank ?</a></li>
-          <li><a href="#">Please provide the process of insta account ?</a></li>
-          <li><a href="#">Insta account in citibank - process ?</a></li>
-          <li><a href="#">What are the process of creating insta account in citibank ?</a></li>
-          <li><a href="#">Insta account in citibank - process ?</a></li>
+          <li><a>What are the process of creating insta account in citibank ?</a></li>
+          <li><a>Please provide the process of insta account ?</a></li>
+          <li><a>Insta account in citibank - process ?</a></li>
+          <li><a>What are the process of creating insta account in citibank ?</a></li>
+          <li><a>Insta account in citibank - process ?</a></li>
         </ul>
     </div>
   </div> -->
