--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -31,7 +31,7 @@
             <div class="label_text">File</div>
             <div class="drag-drop-sec">
               <div _ngcontent-gpv-c11="" class="imageDiv">
-                <img _ngcontent-gpv-c11="" class="ng-tns-c11-2" src="{{imageUrl}}">
+                <img _ngcontent-gpv-c11="" class="ng-tns-c11-2" src="assets/images/icons/Upload.svg">
               </div>
               <div class="custom-file " style="opacity: 0;">
                 <input type="file" id="sourceFileUploader" class="custom-file-input "
