--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -12,8 +12,8 @@
 			</span>
 			<span  class="linkTitle">Summary</span>
 		</button>
-		<div  class="mat-button mat_button_cutom_nav activeSubMenu" (click)="preview('Source')">
-			<div routerLinkActive="active">
+		<div  class="mat-button mat_button_cutom_nav activeSubMenu" >
+			<div routerLinkActive="active" (click)="preview('Source')">
 				<span class="inlineIconBox" [routerLink]="['/source']" skipLocationChange>
 					<img src="assets/images/left-menu-icons/newIcons/Assistant-Configuration-gray.svg" class="publish">
 					<img src="assets/images/left-menu-icons/newIcons/Assistant-Configuration-white.svg" class="publish-white">
