--- a/findly-builder/src/app/components/apps-home/apps-home.html
+++ b/findly-builder/src/app/components/apps-home/apps-home.html
@@ -34,7 +34,7 @@
                 <img class="white_arrow" src="assets/icons/caretDownWhit.svg">
               </div>
               <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                <li><a href="#">Import</a></li>
+                <li><a>Import</a></li>
               </ul>
           </span>
           </div>
@@ -80,9 +80,9 @@
               <li class="search-box">
                   <input maxlength="128" type="text" placeholder="Search" class="seach-input">
               </li>                                                
-                <li><a href="#">English</a></li>
-                <li><a href="#">German</a></li>
-                <li><a href="#">French</a></li>
+                <li><a>English</a></li>
+                <li><a>German</a></li>
+                <li><a>French</a></li>
               </ul>
            </div>
       </div>
