--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -28,6 +28,7 @@
               <div class="col" (click)="sortBy('createdOn')">Created <img src="assets/icons/caretDown.svg" class="ml-1"></div>
               <div class="col last-child" (click)="sortBy('name')"></div>
           </header>
+          <perfect-scrollbar class="faq-scrollbar">
           <div class="content-body" *ngFor="let source of resources | filter: [ searchSources , 'name']" (click)="openStatusSlider(source)">
               <div class="col">{{source.title || source.name}}</div>
               <div class="col">{{source.type | titlecase}}</div>
@@ -45,6 +46,8 @@
              </div>
           </div>
           <div class="empty">No Search Results found</div>
+        </perfect-scrollbar>
+         
       </section>                               
   </div>   
   <!-- DATA TABLE ENDS HERE -->
