--- a/findly-builder/src/app/components/summary/summary.component.html
+++ b/findly-builder/src/app/components/summary/summary.component.html
@@ -19,7 +19,7 @@
           </div>
         </div>
         <div class="btnContainer">
-          <a href="#" class="learn-more">Lets Get Started?</a>
+          <!-- <a class="learn-more">Lets Get Started?</a> -->
           <button class="kr-sg-button-primary btn_md"  [routerLink]="['/source']" skipLocationChange>Add Source</button>
         </div>
       </div>
