--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -27,6 +27,9 @@
     height: calc(100vh - 100px);
     background: #f2f3f5;
     overflow: auto;
+    &.fullHeight{
+        height: calc(100vh - 52px) !important;
+    }
     &.heightAdjust{
         height: calc(100vh);
         background: #fff;
@@ -45,7 +48,7 @@
                 left: 55px;
                 bottom: 0;
                 padding: 10px;
-                padding-left: 200px;               
+                padding-left: 12%;            
             }
         }
     }    
