--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -130,7 +130,7 @@
                                             <div class="tags">Tags: <span *ngFor="let tag of faq.keywords">{{tag}}</span></div>
                                             <!-- <div class="follow_up_que">+ Add a Followup Question</div> -->
                                         </div>
-                                        <div class="train-your-question-sec">
+                                        <div class="train-your-question-sec hide">
                                             <div class="label_text">Train Your Question</div>
                                             <div class="box-train">
                                                 <div class="label_text">How to extend the daily transfer linit in Citi Bank?</div>  
