--- a/findly-builder/src/app/app.component.scss
+++ b/findly-builder/src/app/app.component.scss
@@ -13,10 +13,10 @@
             display: block !important;
         }
         .appContent{
-            padding-left: 13%;
+            padding-left: 245px;
             display: block;
             padding-right: 0;
-            padding-top: 51px;
+            padding-top: 61px;
         }
     }
 }
