--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -20,15 +20,15 @@
     }  
 }
 .contentContainer{
-    padding-left: 15px;
-    padding-top: 15px;
-    padding-right: 15px;   
+    padding-left: 65px;
+    padding-top: 30px;
+    padding-right: 15px;
     // height: calc(100vh);
-    height: calc(100vh - 100px);
-    background: #f2f3f5;
+    height: calc(100vh - 118px);
+    background: #fff;
     overflow: auto;
     &.fullHeight{
-        height: calc(100vh - 52px) !important;
+        height: calc(100vh - 62px) !important;
     }
     &.heightAdjust{
         height: calc(100vh);
@@ -39,22 +39,24 @@
             font-weight: bold;
         }
         .crerateWebCrawl{
-            width: 70%;
-            padding: 0 10px;
-            .buttonFooter{
+            width: 87%;
+            padding: 0 80px 0 15px;
+            .buttonFooter{      
                 position: fixed;
-                width: calc(100% + 37px);
+                width: 100%;
                 background-color: #fff;
-                left: 55px;
+                left: 80px;
                 bottom: 0;
                 padding: 10px;
-                padding-left: 12%;            
+                box-shadow: 0px -1px 8px rgba(32, 33, 36, 0.2);
+                padding-left: 245px;
             }
         }
     }    
-    .imageDiv{
+    .imageDiv{       
         img{
-            width: 100px;
+            height: 65px;
+            width: 65px;
         }
     }
     .kr-sg-data-table section.table-content .content-body{
@@ -64,10 +66,13 @@
         position: relative;
         .crawlContent{
             .main-title{
-                padding-left: 10px;
+                padding-left: 15px;
+                color: #202124;
+                font-weight: bold;
+                font-size: 20px;
             }
             .webDomain{    
-                padding: 10px;   
+                padding: 15px;   
                 .check{
                     position: absolute;
                     right: 10px;
@@ -75,42 +80,68 @@
                 }
                 &.selected{
                     .box-block{
-                        border: 2px solid #009dab;
+                        border: 1px solid #85B7FE;
+                        background-color: #F3F8FF;
+                        .title{
+                            color: #07377F;
+                        }
+                        .info-text{
+                            color: #07377F;
+                        }
                     }  
                 }    
                 .box-block{
                     background: #fff;           
-                    border-radius: 4px;
-                    border: 1px solid #e5e8ec;
-                    padding: 16px 20px;
+                    border-radius: 6px;
+                    border: 1px solid #BDC1C6;
+                    padding: 25px 20px;
                     text-align: center;
                     cursor: pointer;
                     transition: all 0.3s ease;
                     position: relative;
-                    &:hover{
-                        box-shadow: 0 4px 8px 2px rgba(138, 149, 159, 0.2);
+                    width: 250px;
+                    height: 250px;
+                    &:hover{                        
+                        border: 1px solid #85B7FE;
+                        background-color: #F3F8FF;
+                        .title{
+                            color: #07377F;
+                        }
+                        .info-text{
+                            color: #07377F;
+                        }
                     }
                     .title{
-                        
+                        color: #202124;
+                        font-size: 16px;
+                        font-weight: 500;
                     }
                     .imageDiv{
-                        padding: 20px 0;
+                        padding: 46px 0;
+                        img{
+                            height: 65px;
+                            width: 65px;
+                        }
                     }
                     .info-text{
-                        color: #8a959f;               
+                        color: #5F6368;             
                         font-size: 14px;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
                     }
                 }           
             }
         }
         .buttonFooter{      
             position: fixed;
-            width: calc(100% + 37px);
+            width: 100%;
             background-color: #fff;
-            left: 55px;
+            left: 80px;
             bottom: 0;
             padding: 10px;
-            padding-left: 200px;
+            box-shadow: 0px -1px 8px rgba(32, 33, 36, 0.2);
+            padding-left: 245px;
         }
     } 
     .kr-sg-file-drag-drop{
