--- a/findly-builder/src/app/components/app-menu/app-menu.component.scss
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.scss
@@ -6,223 +6,74 @@
 @import './../../../app/scss/variables/variables.scss';
 app-mainmenu{
 	.sidebar-fixed{
-		top:0;
-		background:$primaryColor;
+		top:63px;
+		background:#EFF0F1;
 		width:55px;
     	z-index: 9999;
-    	height: 100%;
+    	height: calc(100% - 63px);
 		transition: .33s;
-		overflow: hidden;
-		.logosDiv{
-			// @extend %paddingFifteen;
-			padding: 15px 15px 15px 12px;
-			.logoIcon{
-				display:block;
-				width: 30px;
-				// margin-bottom: 2px;
-			}
-			.logoKoreIcon{
-				display: none;
-			}
-		}
+		overflow: hidden;		
 		&.activeMenu{
-			width: 13%;
-			transition: 0.33s;
-			min-width: 150px;
-		   .logosDiv{
-			   .logoIcon{
-				   display:none;
-			   }
-			   .logoKoreIcon{
-				   display:block;
-			   }
-		   }
-	     .mat-button{
-			   .linkTitle{
-				   display: inline-block;
-				   position: absolute;
-				   @extend %marginLeftTen;
-				   top: 10px;
-				   outline: none;
-			   }
-		   }
-	   }
-		
+			width: 245px;
+			transition: 0.33s;	
+			padding: 15px;	
+			.sub-title{
+				padding: 0 13px;
+				color: #5F6368;
+				font-weight: 600;
+				font-size: 10px;
+				margin: 10px 0 7px 0;
+				text-transform: uppercase;
+				img{
+					float: right;
+					cursor: pointer;
+					position: relative;
+					// top: 5px;
+					outline: 0;					
+					border-radius: 100px;
+					padding: 3px;
+					&.active{
+						background: #fff;
+					}
+				}
+			}
+	   }		
 		.mat-button{
 			text-align: left;
-			color: $secondaryColor;
-			padding: 8px 20px;
-			// opacity: 0.5;
-			&.mat_button_cutom_nav{
-				min-width: auto !important;
+			color: #3C4043;
+			padding: 1px 13px;
+			border-radius: 4px;		
+			font-family: Inter !important;
+			&.settings-menu{
+				position: absolute;
+				bottom: 0px;
+				width: 100%;
+				left: 0;
+				padding: 0 25px;
+				background: #E4E5E7;
 			}
 			.inlineIconBox{
 				display: inline-block;
-				width: 20px;
-				outline: none;
-                &.leftAdjust{
-					left: -3px;
+				width: 30px;
+				outline: none;   
+				img{
 					position: relative;
-				}
+					top: -2px;
+				}            
 			}
-			.dashboard{
-				display: inline-block;
-			}
-			.ivr{
-				display: inline-block;
-			}
-			.call-flow{
-				display: inline-block;
-			}
-			.forms{
-				display: inline-block;
-			}
-			.live-agent{
-				display: inline-block;
-			}
-			.channels{
-				display: inline-block;
-			}
-			.publish{
-				display: inline-block;
-			}
-			.callHistory{
-				display: inline-block;
-			}
-			.settings{
-				display: inline-block;
-			}
-			.dashboard-white{
-				display: none;
-			}
-			.ivr-white{
-				display: none;
-			}
-			.call-flow-white{
-				display: none;
-			}
-			.forms-white{
-				display: none;
-			}
-			.live-agent-white{
-				display: none;
-			}
-			.channels-white{
-				display: none;
-			}
-			.publish-white{
-				display: none;
-			}
-			.callHistory-white{
-				display: none;
-			}
-			.settings-white{
-				display: none;
-			}
-			&.active{
-				// color: $whiteColor;
-				color: $backgroundColor;
-				background-color: #354155;
-				.dashboard{
-					display: none;
-				}
-				.ivr{
-					display: none;
-				}
-				.call-flow{
-					display: none;
-				}
-				.forms{
-					display: none;
-				}
-				.live-agent{
-					display: none;
-				}
-				.channels{
-					display: none;
-				}
-				.publish{
-					display: none;
-				}
-				.callHistory{
-					display: none;
-				}
-				.settings{
-					display: none;
-				}
-				.dashboard-white{
-					display: inline-block;
-				}
-				.ivr-white{
-					display: inline-block;
-				}
-				.call-flow-white{
-					display: inline-block;
-				}
-				.forms-white{
-					display: inline-block;
-				}
-				.live-agent-white{
-					display: inline-block;
-				}
-				.channels-white{
-					display: inline-block;
-				}
-				.publish-white{
-					display: inline-block;
-				}
-				.callHistory-white{
-					display: inline-block;
-				}
-				.settings-white{
-					display: inline-block;
-				}
-			}
-			.hoverIcons{
-				display: none;
-				padding-left: 26px;
-				.subMenu{
-					position: relative;
-					color: $secondaryColor;
-					padding: 5px 5px 0px 4px;
-					outline: 0;
-					div{
-						outline: none;
-					}
-					&:hover{
-						color: $whiteColor;
-					}
-					&.active{
-						color: $whiteColor;
-					}
-				}
-			}
+			.linkTitle{
+				font-size: 14px;
+				font-weight: normal;
+				color: #3C4043;
+				outline: 0 !important;
+			}			
+			&.active{				
+				background-color: $whiteColor;				
+			}			
 			&:hover{
-				color: $whiteColor;
-				background-color: #354155;
-				.hoverIcons{
-					display: block;
-				}
-			}
-			.active{
-				color: $whiteColor;
-				.publish-white{
-					display: inline-block;
-				}
-				.publish{
-					display: none;
-				}
-			}
-			&.activeSubMenu{
-				// color: $whiteColor;
-				.hoverIcons{
-					display: block;
-				}
-			}
-			.linkTitle{display: none;font-weight: normal;}
-			.mat-button-focus-overlay{
-				background-color: #009dab15;
-			}
+				color: #3C4043;
+				background-color: $whiteColor;			
+			}			
 		}
 	}
 }
